@@ -1,3 +1,4 @@
+ - Add functionality for accessing time series sample times: vector_times(), mesh_times()
  - Add functionality for snapping mesh to curved boundaries during refinement
  - Add functionality for smoothing the boundary of a mesh
  - Speedup assembly over exterior facets by not using BoundaryMesh
